# rummage

./: .cursorrules  .gitignore  Cargo.toml  LICENSE.txt  README.md  bevy_0_16_upgrade_notes.md
.cargo/: config.toml
.cursor/rules/: bands_of_light_ui.mdc  bevy-project-structure.mdc  bevy.mdc  bevy_rand.mdc  book_editing.mdc  cards.mdc  cargo-build-check.mdc  check_compilation.mdc  compile_check.mdc  general.mdc  git_commits.mdc  imagenode.mdc  mtg.mdc  mtgjson_importer.mdc  save.mdc  testing.mdc
.github/: FUNDING.yml  README.md
.github/workflows/: all-tests.yml  deploy-docs.yml  visual-tests.yml
docs/: CONTRIBUTING.md  Makefile  README.md  SUMMARY.md  book.toml  game_loop.md  index.md  wsl2g.md
docs/api/: component_reference.md  core_types.md  index.md  system_reference.md
docs/book/: 404.html  CONTRIBUTING.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/book/api/: index.html
docs/book/commander/: index.html
docs/book/contributing/: documentation.html
docs/book/game_gui/: index.html  overview.html
docs/card_systems/: index.md  ui_integration.md
docs/commander/: 01_overview.md  02_game_state.md  03_player_management.md  04_turn_structure.md  05_command_zone.md  06_combat_system.md  07_priority_stack.md  08_state_based_actions.md  09_multiplayer_politics.md  index.md
docs/contributing/: documentation.md  git_workflow.md
docs/development/: index.md  snapshots.md
docs/game_engine/: index.md  save_load.md  snapshot.md  state_management.md
docs/game_gui/: card_integration.md  index.md  overview.md
docs/mtg_core/: abilities.md  casting_spells.md  ecs_implementation.md  index.md
docs/mtg_rules/: card_states.md  combat.md  commander_specific.md  comprehensive_rules.md  index.md  layer_system.md  mana_costs.md  priority.md  replacement_effects.md  stack.md  state_based_actions.md  subgames.md  targeting.md  triggered_abilities.md  turn_structure.md  zones.md
docs/networking/: game_departure_handling.md  index.md  integration_testing.md  lobby_deck_viewer.md  lobby_ui_overview.md  multiplayer.md  overview.md  protocol.md
docs/reference/: glossary.md
docs/save_load_system/: implementation.md  index.md  overview.md  web_storage.md
docs/testing/: ci_cd_pipeline.md  development_integration.md  end_to_end_testing.md  index.md  integration_testing.md  performance_testing.md  snapshot_testing.md  unit_testing.md  visual_differential.md  visual_differential_testing.md  visual_testing.md
src/: camera.rs  card.rs  docs.rs  drag.rs  lib.rs  main.rs  main.rs.bak  mana.rs  menu.rs  player.rs  text.rs
src/camera/: components.rs  config.rs  mod.rs  state.rs  systems.rs
src/card/: artifacts.rs  black.rs  blue.rs  builder.rs  components.rs  counters.rs  details.rs  green.rs  hdr.rs  keywords.rs  mod.rs  red.rs  systems.rs  types.rs  white.rs
src/card/sets/: mod.rs
src/cards/: artifacts.rs  black.rs  blue.rs  builder.rs  card.rs  details.rs  green.rs  hdr.rs  keywords.rs  mod.rs  mtgjson.rs  plugin.rs  rarity.rs  red.rs  state.rs  systems.rs  white.rs
src/deck/: builder.rs  mod.rs  types.rs
src/game_engine/: actions.rs  combat.rs  commander.rs  events.rs  keywords_and_counters.rs  mod.rs  phase.rs  politics.rs  priority.rs  stack.rs  state.rs  turns.rs  zones.rs
src/mana/: color.rs  cost.rs  mod.rs  pool.rs  symbols.rs
src/menu/: backgrounds.rs  camera.rs  cleanup.rs  components.rs  credits.rs  deck.rs  decorations.rs  input_blocker.rs  logo.rs  main.rs  main_menu.rs  mod.rs  pause.rs  pause_menu.rs  pause_menu.rs.bak  plugin.rs  simple_menu.rs  stars.rs  state.rs  state_transitions.rs  styles.rs  systems.rs  ui.rs
src/networking/: mod.rs
src/player/: mod.rs
src/plugins/: game_plugin.rs  mod.rs
src/snapshot/: components.rs  examples.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/tests/: mod.rs  save_load.rs
src/text/: components.rs  mana_circles.rs  mana_symbols.rs  mod.rs  systems.rs  utils.rs
src/tracing/: mod.rs
src/utils/: app.rs  mod.rs  snapshot.rs
src/wsl2/: mod.rs  plugin.rs  systems.rs  utils.rs
tests/: camera.rs  combat_tests.rs  commander_tests.rs  game_engine_tests.rs  menu.rs  mod.rs  politics_tests.rs  state_based_actions_tests.rs  text_rendering.rs
tests/mtgjson/: mocks.rs  set_import_test.rs  unit.rs
(+585 files in other folders)
