[package]
name = "rummage"
version = "0.1.0"
edition = "2024"

[features]
test-utils = []

[dependencies]
async-trait = "0.1.77"
bevy = { version = "0.15", features = ["dynamic_linking", "wayland"] }
bevy_prng = { version = "0.9", features = ["wyrand"] }
bevy_rand = { version = "0.9", features = ["wyrand", "experimental"] }
bitflags = "2.9.0"
bzip2 = "0.5.2"
chrono = "0.4.40"
dirs = "6.0.0"
flate2 = "1.1.0"
hex = "0.4.3"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.9.0"
rand_core = "0.9.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tar = "0.4.44"
tokio = { version = "1.0", features = ["time"] }
lazy_static = "1.4"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
